--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Final Project",
   "main": "index.js",
   "scripts": {
-    "dev": "node src/configuration/swagger.ts && npx ts-node-dev src/app.ts",
+    "dev": "node src/configuration/swagger/swagger.ts && npx ts-node-dev src/app.ts",
     "format": "prettier --write \"src/**/*.ts\"",
     "test": "jest --passWithNoTests"
   },
@@ -15,17 +15,20 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "redis": "^4.6.10",
+    "redis-om": "^0.4.3",
+    "swagger-ui-express": "^5.0.0",
+    "twilio": "^4.19.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.4.4",
-    "@types/swagger-jsdoc": "^6.0.2",
+    "@types/redis-mock": "^0.17.2",
     "@types/swagger-ui-express": "^4.1.5",
     "jest": "^29.6.1",
+    "redis-mock": "^0.56.3",
     "swagger-autogen": "^2.23.7",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0"
