--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "twili-oh-yes",
   "version": "1.0.0",
-  "description": "Final Project",
+  "description": "Final school project",
   "main": "index.js",
   "scripts": {
     "dev": "node src/configuration/swagger-config.ts && npx ts-node-dev src/app.ts",
-    "format": "prettier --write \"src/**/*.ts\"",
     "test": "jest --passWithNoTests"
   },
   "keywords": [],
