--- a/src/Twili-Oh-Yes.Web/package.json
+++ b/src/Twili-Oh-Yes.Web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "twili-oh-yes-web",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -10,10 +10,7 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
-    "axios": "^1.6.2",
-    "socket.io-client": "^4.7.2",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue": "^3.3.4"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
